namespaces/live.cloud-platform.service.justice.gov.uk/laa-data-stewardship-permissions-api-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-data-stewardship-permissions-api-staging"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-civil-decide"
    cloud-platform.justice.gov.uk/application: "Data Stewardship Permissions API"
    cloud-platform.justice.gov.uk/owner: "LAA Civil Decide: civil-decide@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-data-stewardship-permissions-api"
    cloud-platform.justice.gov.uk/team-name: "laa-decide"
    cloud-platform.justice.gov.uk/review-after: ""
